# grandpas-ray-tracer

./: .gitignore  CMakeLists.txt  README.md
raytracer/: camera.cpp  camera.h  color.cpp  color.h  create_image.cpp  create_image.h  geometry.cpp  geometry.h  geometry_rotation.cpp  geometry_rotation.h  geometry_util.cpp  geometry_util.h  main.cpp  material.cpp  material.h  output.ppm  pdf.cpp  pdf.h  post_processing.cpp  post_processing.h  ray.cpp  ray.h  raytracer.sln  raytracer.vcxproj  raytracer.vcxproj.filters  scene_creation.cpp  scene_creation.h  scene_population.cpp  scene_population.h  scene_util.cpp  scene_util.h  util.cpp  util.h
raytracer/x64/Debug/: raytracer.exe.recipe  raytracer.ilk  raytracer.vcxproj.FileListAbsolute.txt  vc143.idb
raytracer/x64/Debug/raytracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  raytracer.lastbuildstate
